# ChefVirutal

./: .gitignore  CMakeLists.txt  GestorRecetas.cpp  gestorrecetas.hpp  main.cpp  receta.cpp  receta.hpp  recetas.txt
headerfiles/: GestorRecetas.hpp  Receta.hpp
sourcefiles/: GestorRecetas.cpp  Receta.cpp
